src/test/ui/issues/1-9999/issue-4968.stderr
error[E0308]: mismatched types
  --> $DIR/issue-4968.rs:5:16
   |
LL | const A: (isize,isize) = (4,2);
   | ------------------------------- constant defined here
LL | fn main() {
LL |     match 42 { A => () }
   |                ^
   |                |
   |                expected integer, found tuple
   |                `A` is interpreted as a constant, not a new binding
   |                help: introduce a new binding instead: `other_a`
   |
   = note: expected type `{integer}`
             found tuple `(isize, isize)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
